--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			// 定義畫布長寬
 			var canvas_len = 900, canvas_hei = 550 ;
 			// 建立地圖框架
-			var mapcontrol = new Main_Map( "01", canvas_len, canvas_hei, true ) ;
+			var mapcontrol = new Main_Map( "01", canvas_len, canvas_hei, false ) ;
 			// 建立遊戲框架
 			var framework = new Main_Framework( canvas_len, canvas_hei ) ;
 			// 建立角色物件
@@ -37,8 +37,6 @@
 
 			baphomet.OnLifeModify( -100, -40 ) ;
 			createjs.Tween.get( baphomet.container, { loop: false } )
-								.wait(    0 ).call( function() { mapcontrol.GetObjectbyGrid( 9, 3 ) ; } )
-								.wait( 1000 ).call( function() { farmiliar_01.OnWalk( 9, 3 ) ; } )
 								.wait( 1000 ).call( function() { baphomet.OnTalk( "哈囉 ^^" ) ; } )
 								.wait( 1000 ).call( function() { baphomet.OnWalk( 4, 4 ) ; } )
 								.wait( 1500 ).call( function() { baphomet.OnWalk( 5, 4 ) ; } )
@@ -47,11 +45,11 @@
 								.wait(  500 ).call( function() { farmiliar_02.OnWalk( 11, 3 ) ; } )
 								.wait(  500 ).call( function() { farmiliar_03.OnWalk( 13, 3 ) ; } )
 								.wait( 2500 ).call( function() { baphomet.OnTalk( "以及我的在校成績。" ) ; } )
-								.wait( 3500 ).call( function() { farmiliar_01.OnTalk( "我負責介紹大一程式, 吱吱。" ) ; } )
+								.wait( 3500 ).call( function() { farmiliar_01.OnTalk( "我負責告訴你成績, 吱吱。" ) ; } )
 								.wait(    0 ).call( function() { farmiliar_01.OnWalk( 12, 6 ) ; } )
-								.wait( 3500 ).call( function() { farmiliar_02.OnTalk( "吱, 我來介紹大二程式。" ) ; } )
+								.wait( 3500 ).call( function() { farmiliar_02.OnTalk( "吱, 我來介紹程式、專題。" ) ; } )
 								.wait(    0 ).call( function() { farmiliar_02.OnWalk( 14, 4 ) ; } )
-								.wait( 3500 ).call( function() { farmiliar_03.OnTalk( "吱吱... 大三..." ) ; } )
+								.wait( 3500 ).call( function() { farmiliar_03.OnTalk( "吱吱... 我沒事情做..." ) ; } )
 								.wait(    0 ).call( function() { farmiliar_03.OnWalk( 16, 2 ) ; } )
 								.wait( 1000 ).call( function() { baphomet.OnTalk( "走到該蝙蝠附近, 就可以觀看囉。（移動滑鼠）" ) ; } )
 
@@ -105,15 +103,15 @@
 	</canvas>
 
 	<div id="dialog_01" title="吸血蝙蝠小弟" number=1>
-		<p>你要觀看鮭魚的大一記錄嗎？</p>
+		<p>你要觀看鮭魚的在學成績記錄嗎？</p>
 	</div>
 
 	<div id="dialog_02" title="吸血蝙蝠二哥">
-		<p>你要觀看鮭魚的大二記錄嗎？</p>
+		<p>你要觀看鮭魚的程式、專題記錄嗎？</p>
 	</div>
 
 	<div id="dialog_03" title="吸血蝙蝠大哥">
-		<p>你要觀看鮭魚的大三記錄嗎？</p>
+		<p>吱吱</p>
 	</div>
 
 
