Cancel singel map pic.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			// 定義畫布長寬
 			var canvas_len = 900, canvas_hei = 550 ;
 			// 建立地圖框架
-			var mapcontrol = new Main_Map( "01", canvas_len, canvas_hei, false ) ;
+			var mapcontrol = new Main_Map( "01", canvas_len, canvas_hei, true ) ;
 			// 建立遊戲框架
 			var framework = new Main_Framework( canvas_len, canvas_hei ) ;
 			// 建立角色物件
