Global values to control. - adding function.

--- a/build_map.html
+++ b/build_map.html
@@ -9,6 +9,7 @@
 	<script src="src/jquery-ui-1.10.4.custom.js"></script>
 
 	<script src="src/createjs-2013.12.12.min.js"></script>
+	<script src="src/build/global_values.js"></script>
 	<script src="src/build/material_box.js"></script>
 	<script src="src/build/preview_box.js"></script>
 
