--- a/build_map.html
+++ b/build_map.html
@@ -19,6 +19,7 @@
 			stage = new createjs.Stage( "myCanvas" ) ;
     		document.body.style.cursor = "url('pic/cursor/normal_select.cur'), default" ;
 
+			var G = new GlobalValues() ;
 			var material = new MaterialBox() ;
 			var preview = new PreviewBox( material ) ;
 
@@ -32,8 +33,8 @@
 				stage.update() ;
 			} // tick()
 
-		    // jQuery Setting.
-		    $( '#dialog_01' ).dialog({
+			// jQuery Setting.
+			$( '#dialog_newMap' ).dialog({
 				autoOpen: false,
 				height: 230,
 				modal: true,
@@ -70,6 +71,41 @@
 					duration: 500
 				}
 			}) ;
+			// jQuery Setting.
+			$( '#dialog_saveMap' ).dialog({
+				autoOpen: false,
+				height: 230,
+				modal: true,
+				show: {
+					effect: "blind",
+					duration: 1000
+				},
+				hide: {
+					effect: "blind",
+					duration: 500
+				},
+				buttons: {
+					"Create": function() {
+						var obj = {
+							tilePixel : G.size,
+							name : 'HelloWorld',
+							length : G.length,
+							height : G.height,
+							tileData : [ preview.box.mapbox.tiled_data ],
+							objectData : [],
+							lightData : [],
+							soundData : []
+						} ;
+						var json = JSON.stringify( obj ) ;
+						var obj = eval ( "(" + json + ")" ) ;
+						console.log( obj ) ;
+						$( this ).dialog( "close" ) ;
+					},
+					"Cancel": function() {
+						$( this ).dialog( "close" ) ;
+					}
+				}
+			}) ;
 		} // init()
 	</script>
 
@@ -90,12 +126,16 @@
 		Alternative Content
 	</canvas>
 
-	<div id="dialog_01" title="Tiled Map Editor" number=1>
+	<div id="dialog_newMap" title="Tiled Map Editor" number=1>
 		<p>Do yo wanna create a new map?</p>
 	</div>
 
 	<div id="dialog_02" title="Tiled Map Editor">
 		<p>Please key in you map size.</p>
+	</div>
+
+	<div id="dialog_saveMap" title="Tiled Map Editor">
+		<p>Wanna save the map?</p>
 	</div>
 
 	<a href="https://github.com/grass0916/Stardust-Script"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
