--- a/build_map.html
+++ b/build_map.html
@@ -36,20 +36,14 @@
 			// jQuery Setting.
 			$( '#dialog_newMap' ).dialog({
 				autoOpen: false,
-				height: 230,
+				height: 200,
 				modal: true,
-				show: {
-					effect: "blind",
-					duration: 1000
-				},
-				hide: {
-					effect: "blind",
-					duration: 500
-				},
+				show: { effect: "blind", duration: 1000 },
+				hide: { effect: "blind", duration: 500 },
 				buttons: {
 					"Create": function() {
 						$( this ).dialog( "close" ) ;
-						$( "#dialog_02" ).dialog( "open" ) ;
+						$( "#dialog_keySize" ).dialog( "open" ) ;
 					},
 					"Cancel": function() {
 						$( this ).dialog( "close" ) ;
@@ -57,35 +51,51 @@
 				}
 			}) ;
 		    // jQuery Setting.
-		    $( '#dialog_02' ).dialog({
+		    $( '#dialog_keySize' ).dialog({
 				autoOpen: false,
-				width: 550,
-				height: 400,
+				height: 310,
 				modal: true,
-				show: {
-					effect: "blind",
-					duration: 1000
-				},
-				hide: {
-					effect: "blind",
-					duration: 500
+				show: { effect: "blind", duration: 1000 },
+				hide: { effect: "blind", duration: 500 },
+				buttons: {
+					"Done": function() {
+						$( this ).dialog( "close" ) ;
+					},
+					"Cancel": function() {
+						$( this ).dialog( "close" ) ;
+					}
 				}
 			}) ;
 			// jQuery Setting.
 			$( '#dialog_saveMap' ).dialog({
 				autoOpen: false,
-				height: 230,
+				height: 200,
 				modal: true,
-				show: {
-					effect: "blind",
-					duration: 1000
-				},
-				hide: {
-					effect: "blind",
-					duration: 500
-				},
+				show: { effect: "blind", duration: 1000 },
+				hide: { effect: "blind", duration: 500 },
 				buttons: {
-					"Create": function() {
+					"Save": function() {
+						$( this ).dialog( "close" ) ;
+						$( '#jsonExport' ).val( "" ) ;
+						$( "#dialog_jsonExport" ).dialog( "open" ) ;
+					},
+					"Load": function() {
+						$( this ).dialog( "close" ) ;
+					},
+					"Cancel": function() {
+						$( this ).dialog( "close" ) ;
+					}
+				}
+			}) ;
+		    // jQuery Setting.
+		    $( '#dialog_jsonExport' ).dialog({
+				autoOpen: false,
+				height: 310,
+				modal: true,
+				show: { effect: "blind", duration: 1000 },
+				hide: { effect: "blind", duration: 500 },
+				buttons: {
+					"Get the json": function() {
 						var obj = {
 							tilePixel : G.size,
 							name : 'HelloWorld',
@@ -97,9 +107,9 @@
 							soundData : []
 						} ;
 						var json = JSON.stringify( obj ) ;
-						var obj = eval ( "(" + json + ")" ) ;
-						console.log( obj ) ;
-						$( this ).dialog( "close" ) ;
+						// var obj = eval ( "(" + json + ")" ) ;
+						// console.log( obj ) ;
+						$( '#jsonExport' ).val( json ) ;
 					},
 					"Cancel": function() {
 						$( this ).dialog( "close" ) ;
@@ -130,15 +140,28 @@
 		<p>Do yo wanna create a new map?</p>
 	</div>
 
-	<div id="dialog_02" title="Tiled Map Editor">
+	<div id="dialog_keySize" title="Tiled Map Editor">
 		<p>Please key in you map size.</p>
+		<br />
+		<label for="length">Length</label>
+		<input type="text" name="length" id="length" value="" class="text ui-widget-content ui-corner-all">
+		<br /><br />
+		<label for="height">Height</label>
+		<input type="text" name="height" id="height" value="" class="text ui-widget-content ui-corner-all">
 	</div>
 
 	<div id="dialog_saveMap" title="Tiled Map Editor">
-		<p>Wanna save the map?</p>
+		<p>Wanna save or load the map?</p>
 	</div>
 
-	<a href="https://github.com/grass0916/Stardust-Script"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
+	<div id="dialog_jsonExport" title="Tiled Map Editor">
+		<p>You can copy it.</p>
+		<input type="text" name="jsonExport" id="jsonExport" value="" class="text ui-widget-content ui-corner-all">
+	</div>
+
+
+	<!--<a href="https://github.com/grass0916/Stardust-Script"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>-->
+
 </body>
 
 </html>
