--- a/build_map.html
+++ b/build_map.html
@@ -50,8 +50,8 @@
 					}
 				}
 			}) ;
-		    // jQuery Setting.
-		    $( '#dialog_keySize' ).dialog({
+			// jQuery Setting.
+			$( '#dialog_keySize' ).dialog({
 				autoOpen: false,
 				height: 310,
 				modal: true,
@@ -81,14 +81,16 @@
 					},
 					"Load": function() {
 						$( this ).dialog( "close" ) ;
+						$( '#jsonImport' ).val( "" ) ;
+						$( "#dialog_jsonImport" ).dialog( "open" ) ;
 					},
 					"Cancel": function() {
 						$( this ).dialog( "close" ) ;
 					}
 				}
 			}) ;
-		    // jQuery Setting.
-		    $( '#dialog_jsonExport' ).dialog({
+			// jQuery Setting.
+			$( '#dialog_jsonExport' ).dialog({
 				autoOpen: false,
 				height: 310,
 				modal: true,
@@ -107,9 +109,25 @@
 							soundData : []
 						} ;
 						var json = JSON.stringify( obj ) ;
-						// var obj = eval ( "(" + json + ")" ) ;
-						// console.log( obj ) ;
 						$( '#jsonExport' ).val( json ) ;
+					},
+					"Cancel": function() {
+						$( this ).dialog( "close" ) ;
+					}
+				}
+			}) ;
+			// jQuery Setting.
+			$( '#dialog_jsonImport' ).dialog({
+				autoOpen: false,
+				height: 310,
+				modal: true,
+				show: { effect: "blind", duration: 1000 },
+				hide: { effect: "blind", duration: 500 },
+				buttons: {
+					"Set the json": function() {
+						var obj = eval ( "(" + $( '#jsonImport' ).val() + ")" ) ;
+						preview.box.mapbox.tiled_data = obj.tileData[0] ;
+						console.log( JSON.stringify( preview.box.mapbox.tiled_data ) ) ;
 					},
 					"Cancel": function() {
 						$( this ).dialog( "close" ) ;
@@ -159,8 +177,12 @@
 		<input type="text" name="jsonExport" id="jsonExport" value="" class="text ui-widget-content ui-corner-all">
 	</div>
 
+	<div id="dialog_jsonImport" title="Tiled Map Editor">
+		<p>You can key the json of the map.</p>
+		<input type="text" name="jsonImport" id="jsonImport" value="" class="text ui-widget-content ui-corner-all">
+	</div>
 
-	<!--<a href="https://github.com/grass0916/Stardust-Script"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>-->
+	<a href="https://github.com/grass0916/Stardust-Script"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
 
 </body>
 
