--- a/build_map.html
+++ b/build_map.html
@@ -174,12 +174,12 @@
 
 	<div id="dialog_jsonExport" title="Tiled Map Editor">
 		<p>You can copy it.</p>
-		<input type="text" name="jsonExport" id="jsonExport" value="" class="text ui-widget-content ui-corner-all">
+		<textarea type="text" name="jsonExport" id="jsonExport" value="" class="text ui-widget-content ui-corner-all" style="width:100%; height:65%;">
 	</div>
 
 	<div id="dialog_jsonImport" title="Tiled Map Editor">
 		<p>You can key the json of the map.</p>
-		<input type="text" name="jsonImport" id="jsonImport" value="" class="text ui-widget-content ui-corner-all">
+		<textarea type="text" name="jsonImport" id="jsonImport" value="" class="text ui-widget-content ui-corner-all" style="width:100%; height:65%;">
 	</div>
 
 	<a href="https://github.com/grass0916/Stardust-Script"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
