Floating Sample fixed

--- a/build_map.html
+++ b/build_map.html
@@ -13,6 +13,7 @@
 	<script src="src/build/material_box.js"></script>
 	<script src="src/build/preview_box.js"></script>
 	<script src="pic/map/texture/adding.js"></script>
+	<script src="pic/map/object/adding.js"></script>
 
 	<script>
 		var stage ;
