Add new jQ src.

--- a/build_map.html
+++ b/build_map.html
@@ -5,8 +5,8 @@
 	<title>Stardust Script - Making map</title>
 
 	<link href="css/pepper-grinder/jquery-ui-1.10.4.custom.css" rel="stylesheet">
-	<script src="src/jquery-1.10.2.js"></script>
-	<script src="src/jquery-ui-1.10.4.custom.js"></script>
+	<script src="src/jquery-2.1.1.min.js"></script>
+	<script src="src/jquery-ui-1.10.4.custom.min.js"></script>
 
 	<script src="src/createjs-2013.12.12.min.js"></script>
 	<script src="src/build/global_values.js"></script>
