--- a/build_map.html
+++ b/build_map.html
@@ -34,6 +34,16 @@
 				stage.update() ;
 			} // tick()
 
+
+
+			var callMe = new createjs.Shape() ;
+			callMe.graphics.f( "#FF0000" ).r( 0, 0, 70, 70 ) ;
+			callMe.on( "click", function(){ console.log( "Objects num: " + preview.box.mapbox.objects.getChildAt(1).name + "  x: " + preview.box.mapbox.objects.getChildAt(1).x + " y: " + preview.box.mapbox.objects.getChildAt(1).y ) ; } ) ;
+
+			stage.addChild( callMe ) ;
+
+
+
 			// jQuery Setting.
 			$( '#dialog_newMap' ).dialog({
 				autoOpen: false,
