--- a/build_map.html
+++ b/build_map.html
@@ -38,7 +38,9 @@
 
 			var callMe = new createjs.Shape() ;
 			callMe.graphics.f( "#FF0000" ).r( 0, 0, 70, 70 ) ;
-			callMe.on( "click", function(){ console.log( "Objects num: " + preview.box.mapbox.objects.getChildAt(1).name + "  x: " + preview.box.mapbox.objects.getChildAt(1).x + " y: " + preview.box.mapbox.objects.getChildAt(1).y ) ; } ) ;
+			callMe.on( "click", function(){ 
+				for ( i = 1 ; i < preview.box.mapbox.objects.getNumChildren() ; i ++ )
+					console.log( preview.box.mapbox.tiled.mr + "," + preview.box.mapbox.tiled.mc + "  Objects num: " + preview.box.mapbox.objects.getChildAt(i).name + "  x: " + preview.box.mapbox.objects.getChildAt(i).storeX + " y: " + preview.box.mapbox.objects.getChildAt(i).storeY ) ; } ) ;
 
 			stage.addChild( callMe ) ;
 
