--- a/build_map.html
+++ b/build_map.html
@@ -156,7 +156,7 @@
 									container.regX = container.objects.regX + 10, container.regY = container.objects.regY + 10 ;
 									container.scaleX = obj.objectData[j].sx, container.scaleY = obj.objectData[j].sy ;
 									container.bg = new createjs.Shape() ;
-									container.bg.graphics.f( "#FF0000" ).s( "#000000" ).r( 0, 0, container.getBounds().width + 20, container.getBounds().height + 20 ) ;
+									container.bg.graphics.f( "#AAAAAA" ).s( "#000000" ).r( 0, 0, container.getBounds().width + 20, container.getBounds().height + 20 ) ;
 									container.bg.alpha = 0 ;
 									container.tools = preview.GetToolsBox( container ) ;
 									preview.ToolsBoxListener( container ) ;
