Using JS could check json file at local.

--- a/client/game.html
+++ b/client/game.html
@@ -58,6 +58,11 @@
 			stage.addChild( mapcontrol.container_front ) ;
 			// 遊戲主框架匯入
 		    stage.addChild( framework.container ) ;
+
+
+
+
+		    cacheMapData() ;
 		} // init()
 	</script>
 
