--- a/client/game.html
+++ b/client/game.html
@@ -3,7 +3,6 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<title>Stardust Script</title>
-
 	<!-- jQuery -->
 	<link href="pepper-grinder/jquery-ui-1.10.4.custom.css" rel="stylesheet">
 	<script src="jquery-2.1.1.min.js"></script>
@@ -73,9 +72,6 @@
 	</script>
 
 	<style>
-		body {
-			background-color: #ACA
-		}
 		#myCanvas {
 			 position: absolute ;
 			 top: 50% ;
@@ -87,9 +83,11 @@
 	</style>
 </head>
 
-<body onload="init()">
+<body onload="init()" background="backgroung.png">
 	<canvas id="myCanvas" width="992" height="576">
 		Alternative Content
 	</canvas>
+	
+	<a href="https://github.com/grass0916/Stardust-Script"><img style="position: absolute; top: 0; left: 0; border: 0;" src="https://camo.githubusercontent.com/82b228a3648bf44fc1163ef44c62fcc60081495e/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f6c6566745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_left_red_aa0000.png"></a>
 </body>
 </html>
