--- a/client/game.html
+++ b/client/game.html
@@ -45,9 +45,9 @@
 			var framework = new Main_Framework( canvas_len, canvas_hei ) ;
 			// 建立角色物件
 			var baphomet = new Character( mapcontrol, "baphomet", 175, 55, 1.00, 16, 11, "front" ) ;
-			var farmiliar_01 = new NPC( mapcontrol, "farmiliar_01", 14, 10, 6, "monster", "farmiliar" ) ;
-			var farmiliar_02 = new NPC( mapcontrol, "farmiliar_02", 19, 11, 6, "monster", "farmiliar" ) ;
-			var farmiliar_03 = new NPC( mapcontrol, "farmiliar_03", 18, 13, 6, "monster", "farmiliar" ) ;
+			var farmiliar_proto = new NPC( mapcontrol, "farmiliar_01", 10, 3, "monster", "farmiliar", 6 ) ;
+			farmiliar_proto.Clone( "clone_04", 28, 5, 4 ) ;
+			farmiliar_proto.Clone( "clone_04", 30, 13, 2 ) ;
 
 			baphomet.OnLifeModify( -999, -40 ) ;
 
@@ -57,7 +57,7 @@
 			stage.addChild( mapcontrol.container_back ) ;
 			// 主要角色匯入
 			stage.addChild( baphomet.container ) ;
-			stage.addChild( farmiliar_01.container, farmiliar_02.container, farmiliar_03.container ) ;
+			//stage.addChild( farmiliar_01.container, farmiliar_02.container, farmiliar_03.container ) ;
 			// 地圖景效物件匯入(前端)
 			stage.addChild( mapcontrol.container_front ) ;
 			// 遊戲主框架匯入
