Fading effect conversation.

--- a/client/game.html
+++ b/client/game.html
@@ -48,6 +48,7 @@
 			var farmiliar_proto = new NPC( mapcontrol, "farmiliar_01", { x: 10, y: 3 }, { type: "monster", name: "farmiliar" }, 6 ) ;
 			var farmiliar_clone01 = farmiliar_proto.Clone( "clone_01", { x: 28, y: 5 }, 4 ) ;
 			var farmiliar_clone02 = farmiliar_proto.Clone( "clone_02", { x: 30, y: 13 }, 2 ) ;
+			var baphomet_proto = new NPC( mapcontrol, "baphomet_01", { x: 15, y: 7 }, { type: "character", name: "baphomet" }, 6 ) ;
 
 			baphomet.OnLifeModify( -999, -40 ) ;
 
