--- a/client/game.html
+++ b/client/game.html
@@ -38,11 +38,11 @@
 			stage = new createjs.Stage( "myCanvas" ) ;
     		document.body.style.cursor = "url('cursor/normal_select.cur'), default" ;
 			// 定義畫布長寬
-			var canvas_len = 992, canvas_hei = 576 ;
+			var canvasSize = { length: 992, height: 576 } ;
 			// 建立地圖框架
-			var mapcontrol = new Main_Map( 2, canvas_len, canvas_hei, false ) ;
+			var mapcontrol = new Main_Map( 2, canvasSize, false ) ;
 			// 建立遊戲框架
-			var framework = new Main_Framework( canvas_len, canvas_hei ) ;
+			var framework = new Main_Framework( canvasSize ) ;
 			// 建立角色物件
 			var baphomet = new Character( mapcontrol, "baphomet", 175, 55, 1.00, 16, 11, "front" ) ;
 			var farmiliar_proto = new NPC( mapcontrol, "farmiliar_01", { x: 10, y: 3 }, { type: "monster", name: "farmiliar" }, 6 ) ;
