--- a/client/game.html
+++ b/client/game.html
@@ -33,7 +33,10 @@
 	</script>
 
 	<script>
+		// Canvas stage.
 		var stage ;
+		// Dialog layer.
+		var dialog = new createjs.Container() ;
 		function init() {
 			stage = new createjs.Stage( "myCanvas" ) ;
     		document.body.style.cursor = "url('cursor/normal_select.cur'), default" ;
@@ -62,6 +65,8 @@
 			stage.addChild( mapcontrol.container_front ) ;
 			// 遊戲主框架匯入
 			stage.addChild( framework.container ) ;
+			// Adding dialog layer.
+			stage.addChild( dialog ) ;
 
 			fpsLabel = new createjs.Text( "-- fps", "bold 18px Arial", "#FFF" ) ;
 			fpsLabel.x = 10, fpsLabel.y = 250 ;
