--- a/client/game.html
+++ b/client/game.html
@@ -59,12 +59,10 @@
 			stage.addChild( mapcontrol.backgorond ) ;
 			// 地圖景效物件匯入(後端)
 			stage.addChild( mapcontrol.container_back ) ;
-			// 主要角色匯入
-			mapcontrol.container_front.addChild( mainCharacter.container ) ;
 			// 地圖景效物件匯入(前端)
 			stage.addChild( mapcontrol.container_front ) ;
 			// 遊戲主框架匯入
-			stage.addChild( framework.container ) ;
+			// stage.addChild( framework.container ) ;
 			// Adding dialog layer.
 			stage.addChild( dialog ) ;
 
